<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="88dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent">
        <TextView
            android:singleLine="true"
            android:paddingTop="@dimen/button_padding"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:paddingLeft="@dimen/button_padding"
            android:paddingRight="@dimen/button_padding"
            android:id="@+id/row_item_list_recent_place_txt_place_name"
            android:text="@string/place_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:singleLine="true"
            android:paddingLeft="@dimen/button_padding"
            android:paddingRight="@dimen/button_padding"
            android:textSize="16sp"
            android:id="@+id/row_item_list_recent_place_txt_place_distance"
            android:layout_below="@+id/row_item_list_recent_place_txt_place_name"
            android:text="@string/place_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <ImageView
        android:layout_alignParentRight="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/place_photo"
        android:id="@+id/row_item_list_recent_place_img_place_photo"
        android:layout_width="108dp"
        android:layout_height="70dp" />
</LinearLayout>