<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:typeface="serif"
        android:id="@+id/main_txt_app_name"
        android:layout_marginTop="72dp"
        android:textSize="50sp"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:layout_below="@+id/main_txt_app_name"
        android:layout_width="match_parent"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:layout_height="match_parent">
        <Button
            android:background="@color/colorPrimary"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@android:color/white"
            android:text="@string/main_btn_display"
            style="?android:borderlessButtonStyle"
            android:layout_centerInParent="true"
            android:textStyle="normal"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/main_ela_button"
            android:id="@+id/main_btn_display" />

        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="italic"
            android:layout_centerHorizontal="true"
            android:paddingLeft="@dimen/button_padding"
            android:paddingRight="@dimen/button_padding"
            android:text="@string/main_txt_description"
            android:textColor="@color/colorPrimary"
            android:id="@+id/textView"
            android:layout_below="@+id/main_btn_display"
            />
    </RelativeLayout>
</RelativeLayout>
